--- a/Cv.html
+++ b/Cv.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <div class="left_Side">
 <div class="profileText">
     <h2>ACERCA DE MI</h2>
