--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
              </div>
              <div class="about">
                 <section class="tag">
-                    #HTML #Javascript #CSS #VisualCode #GIT
+                    #HTML / #Javascript / #CSS / #VisualCode /    #GIT
                 </section>
                  <h2 class="titulo3">
                      OBJETIVOS
