--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
             </div>
             <div class="botonDescarga">
                
-                <button class="btn-descarga" id="btn" onclick="descarga()">
-                    PDF <i class="fa-solid fa-download"></i>
-                </button>
+                <a chref="#" class="btn-descarga" id="btn" onclick="descarga()">
+                     <span class="icon-pdf"><i class="fa-solid fa-file-pdf"></i></span>
+                </a>
             </div>
            
         </div>
