--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
             </div>
             <div class="about">
                 <h2 class="titulo3">
+                    EXPERENCIA LABORAL
+                </h2>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">
+                            Asistente Contable - <a href="https://plan-international.org/es/nicaragua" target="_blank">Plan Internacional</a>
+                        </span>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Procesamiento De Datos -</span>
+                        <span class="text">Nortech S.A</span>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="about">
+                <h2 class="titulo3">
                     HABILIDADES TIC´S 
                 </h2>
                 <ul>
