--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     <ul>
         <li>
             <span class="icon"><i class="fa-solid fa-check"></i></span>
-            <span class="text">Curso Básico Introducción al desarrollo web</span>
+            <span class="text">Curso de Introducción al Desarrollo Web: HTML y CSS (1/2)</span>
+            <a href="blob:https://learndigital.withgoogle.com/bd79eca7-7b46-4f22-a204-40eea57b1a0e" target="_blank"> Digital Garage Certificate </a>
         </li>
     </ul>
 </div>
@@ -90,7 +91,7 @@
              </div>
              <div class="about">
                 <section class="tag">
-                    #HTML / #Javascript / #CSS / #VisualCode /    #GIT
+                    #HTML / #Javascript / #CSS / #VisualCode /    #GIT   /  #SQL
                 </section>
                  <h2 class="titulo3">
                      OBJETIVOS
