--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
              </div>
              <div class="about">
                 <section class="tag">
-                    #HTML / #Javascript / #CSS / #VisualCode /    #GIT   /  #SQL
+                    #HTML / #Javascript / #CSS / #VisualCode /    #GIT   
                 </section>
                  <h2 class="titulo3">
                      OBJETIVOS
