--- a/index.html
+++ b/index.html
@@ -95,6 +95,128 @@
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
                 </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Protege tu negocio: Ciberseguridad en teletrabajo (2 h) Google Actívate</span>
+                        <a href="https://drive.google.com/file/d/1P9FVXohbc4N6a5Kg21gey8gGbtszeo88/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Cloud Computing (40 h) Google Actívate</span>
+                        <a href="https://drive.google.com/file/d/1abazlifoy_xiQfYkbZCD-Chn3AxJ7pBk/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de computación básica (14 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/198HC3SgL5DmIxriuIMg5pRrWzDQDZ7B7/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso Profesional de Git y GitHub (22 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1qYH1mHKGQJZLqv1biXcTzESW3KTffXSF/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso definitivo de HTML y CSS (23 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1vyrocLk3JuMmCx9fFYw0m7M7UMKVAg2O/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso práctico de HTML y CSS (16 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1CaIS0MF9y6dOkhdTr8mnhRhTakr9bysy/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de fundamentos de INGENERIA DE SOFTWARE (16 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1_eJjh56PWA1H4Y-mXjPu5laQEGwsrRnI/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de Introducción a la web: historia y funcionamiento de internet (12 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1yHstUewspVpE-RhKQwq6C-Iz-Inb9f3b/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de pensamiento lógicos: Algoritmos y Diagramas de flujo (12 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1uvRZW5WIwD825xQI3TytCd2F3RGszcPJ/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de pensamiento lógicos: Funciones y estructuras de control (12 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1hB9IQLzIjYhlAPsPEGFLRI6jhVA4H4GK/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de pensamiento lógicos: Lenguaje de programación (12 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1ZNZKJDVmWJQeYP0ileAeScrF2TN4tqNs/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso básico de PHP: Instalación, fundamentos y operadores (20 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1_9fDaN4aEREVS9p2Jz9S0qT_kh0Wi5Eq/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de Prework: Configuración de entorno de desarrollo de MACOS (9 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1QmUI2lYBb9LwIVmSslx0Nk79KAAViDXY/view?usp=share_link
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de Prework: Configuración de entorno de desarrollo en WINDOWS (10 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1hiycYH_fARg-AabGIMaW3ySCQHNBGsPu/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso de Introducción a la terminal y línea de comandos (11 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1k8_6nvl6wzRne184773EEsueaUQTKRW2/view?usp=share_link"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+               
+                
 
             </div>
         </div>
