--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa-solid fa-check"></i></span>
-                        <span class="text">Protege tu negocio: Ciberseguridad en teletrabajo (2 h) Google Actívate</span>
+                        <span class="text">Protege tu negocio: Ciberseguridad en teletrabajo (2 h) Google
+                            Actívate</span>
                         <a href="https://drive.google.com/file/d/1P9FVXohbc4N6a5Kg21gey8gGbtszeo88/view?usp=share_link"
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
@@ -154,7 +155,8 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa-solid fa-check"></i></span>
-                        <span class="text">Curso de Introducción a la web: historia y funcionamiento de internet (12 h) Platzi</span>
+                        <span class="text">Curso de Introducción a la web: historia y funcionamiento de internet (12 h)
+                            Platzi</span>
                         <a href="https://drive.google.com/file/d/1yHstUewspVpE-RhKQwq6C-Iz-Inb9f3b/view?usp=share_link"
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
@@ -162,7 +164,8 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa-solid fa-check"></i></span>
-                        <span class="text">Curso de pensamiento lógicos: Algoritmos y Diagramas de flujo (12 h) Platzi</span>
+                        <span class="text">Curso de pensamiento lógicos: Algoritmos y Diagramas de flujo (12 h)
+                            Platzi</span>
                         <a href="https://drive.google.com/file/d/1uvRZW5WIwD825xQI3TytCd2F3RGszcPJ/view?usp=share_link"
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
@@ -170,7 +173,8 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa-solid fa-check"></i></span>
-                        <span class="text">Curso de pensamiento lógicos: Funciones y estructuras de control (12 h) Platzi</span>
+                        <span class="text">Curso de pensamiento lógicos: Funciones y estructuras de control (12 h)
+                            Platzi</span>
                         <a href="https://drive.google.com/file/d/1hB9IQLzIjYhlAPsPEGFLRI6jhVA4H4GK/view?usp=share_link"
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
@@ -186,7 +190,8 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa-solid fa-check"></i></span>
-                        <span class="text">Curso básico de PHP: Instalación, fundamentos y operadores (20 h) Platzi</span>
+                        <span class="text">Curso básico de PHP: Instalación, fundamentos y operadores (20 h)
+                            Platzi</span>
                         <a href="https://drive.google.com/file/d/1_9fDaN4aEREVS9p2Jz9S0qT_kh0Wi5Eq/view?usp=share_link"
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
@@ -194,15 +199,17 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa-solid fa-check"></i></span>
-                        <span class="text">Curso de Prework: Configuración de entorno de desarrollo de MACOS (9 h) Platzi</span>
+                        <span class="text">Curso de Prework: Configuración de entorno de desarrollo de MACOS (9 h)
+                            Platzi</span>
                         <a href="https://drive.google.com/file/d/1QmUI2lYBb9LwIVmSslx0Nk79KAAViDXY/view?usp=share_link
-                            target="_blank"> Digital Garage Certificate </a>
+                            target=" _blank"> Digital Garage Certificate </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
                         <span class="icon"><i class="fa-solid fa-check"></i></span>
-                        <span class="text">Curso de Prework: Configuración de entorno de desarrollo en WINDOWS (10 h) Platzi</span>
+                        <span class="text">Curso de Prework: Configuración de entorno de desarrollo en WINDOWS (10 h)
+                            Platzi</span>
                         <a href="https://drive.google.com/file/d/1hiycYH_fARg-AabGIMaW3ySCQHNBGsPu/view?usp=share_link"
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
@@ -215,8 +222,17 @@
                             target="_blank"> Digital Garage Certificate </a>
                     </li>
                 </ul>
-               
-                
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa-solid fa-check"></i></span>
+                        <span class="text">Curso Programacion Basica (29 h) Platzi</span>
+                        <a href="https://drive.google.com/file/d/1g-Pxje505nUUY4gTebcZltA1dxZdbubO/view?usp=sharing"
+                            target="_blank"> Digital Garage Certificate </a>
+                    </li>
+                </ul>
+
+
+
 
             </div>
         </div>
